--- a/server/seeds/projectSeeds.json
+++ b/server/seeds/projectSeeds.json
@@ -3,18 +3,21 @@
         "name": "Capstone Project",
         "baseLanguage": "Java",
         "openCollab": true,
+        "description": "A capstone project for a computer science degree.",
         "student": "62b8edf7e4b0c81d35fb1b70"
     },
     {
         "name": "Machine Learning Research",
         "baseLanguage": "Python",
         "openCollab": false,
+        "description": "A research project on machine learning.",
         "student": "62b8edf7e4b0c81d35fb1b71"
     },
     {
         "name": "Web Development Bootcamp",
         "baseLanguage": "Javascript",
         "openCollab": true,
+        "description": "A bootcamp for web development.",
         "student": "62b8edf7e4b0c81d35fb1b72"
     }
 ]
