--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "@apollo/server": "^4.7.1",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.17.2",
     "graphql": "^16.6.0",
-    "mongoose": "^7.0.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^7.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
